# BoarSoundClassifier

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytorch_model.ipynb  requirements-dev.txt  requirements.txt
Model/: add_old_q0_files.ipynb  compression_augmentation.ipynb  main.py  pytorch_model_changes.ipynb  pytorch_model_changes_best.ipynb  pytorch_model_changes_nice_training.ipynb  split_data_into_datasets.ipynb  training_history.json  utils.py
Model/SoundData/: DisplaySound.ipynb  RemoveLowQuality.py  RenameFiles.py  SplitCSV.py  SplitWavAudioIn4SekChunks.py  change_label_in_csv.py  pad_audio.py
SoundData/: DisplaySound.ipynb  Metadata.xlsm  SplitWavAudioIn4SekChunks.py  split_files.py
SoundData/PreparedData/: FileNames.txt
archive/: pytorch_model_changes_good_weight_decay_1st.ipynb  pytorch_model_changes_saved.ipynb
docs/plans/: 2026-05-03-clean-and-refactor-plan.md
src/boar_sound_classifier/: __init__.py  config.py
tests/: conftest.py
