[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boar-sound-classifier"
version = "0.1.0"
description = "Binary audio classifier: detect wild boar in 4-second audio clips"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Krysia" },
]
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "librosa>=0.10",
    "audiomentations>=0.33",
    "albumentations>=1.3",
    "soundfile>=0.12",
    "pydub>=0.25",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "nbstripout>=0.6",
    "pre-commit>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
